# clip-dk

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
goodclips/: clip_data.py  deepsort_types.py  download_clip.py  gen_deepsorts.py  ls_task.py  types.py  utils.py  validate.py
label-studio/: Dockerfile  Dockerrun.aws.json  deploy.sh  push-docker.sh
label-studio/.ebextensions/: 01_mount.config
label-studio/.platform/: 00_nginx.config
label-studio/.platform/nginx/conf.d/: proxy.conf
notebooks/: annotations.ipynb  measure_movement.ipynb
playground/: movement.py  page1.py  yolo2.py  yolotrack.py
video-selector-app/: next.config.ts  package.json
video-selector-app/src/app/: page.tsx
video-selector-app/src/pages/api/annotations/: [id].tsx
video-selector-app/src/pages/api/videos/: [path].ts  index.ts
video-selector-app/src/shared/: types.ts
