[tool.poetry]
name = "clip-dk"
version = "0.1.0"
description = ""
authors = ["Charles Parker <charles@parkerfolk.net>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
pillow = "^10.4.0"
ultralytics = "^8.3.28"
lapx = "^0.5.11"
ipython = "^8.30.0"
pydantic = "^2.10.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
